@@ -44,6 +44,8 @@ class SettingsSchema(Schema):
 
     max_commit_diff = fields.Int(missing=0)
 
+    sentry_dsn = fields.Str(missing='')
+
     # Settings coming from CLI arguments
     robot_password = fields.Str(missing='')
     jira_password = fields.Str(missing='')
